--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "enzyme": "2.4.1",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
