--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "lint": "./node_modules/.bin/eslint ."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "^2.1.0",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^10.0.3",
     "concurrently": "^3.1.0",
     "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "webpack": "^4.39.3"
   }
