--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "babel-plugin-transform-class-properties": "6.22.0",
+    "classnames": "^2.2.6",
+    "markdown-to-jsx": "^6.10.3",
     "react": "16.8.0",
     "react-dom": "16.8.0",
     "semantic-ui": "^2.4.2",
