--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server.js",
-    "client": "node start-client.js",
+    "server": "pm2 start  server.js --log ./logs/nodeServerLogs --name nodeServer -i max",
+    "client": "pm2 start start-client.js --log ./logs/reactServerLogs --name reactFrontEnd",
     "dev": "echo \"This command has been deprecated. Use 'npm start'\" && exit 1",
     "lint": "./node_modules/.bin/eslint ."
   },
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "webpack": "4.39.1"
   }
 }
